# origin

./: .gitignore
Module 2/TasK_6_2/: Counter.cpp  Counter.h  TasK_6_2.cpp  TasK_6_2.sln  TasK_6_2.vcxproj
Module 2/Task_10_1/: main.cpp
Module 2/Task_10_2/: CMakeLists.txt  Figure.h  Isosceles_Triangle.cpp  Parallelogram.cpp  Quadrangle.h  Square.cpp  Task_6_3.cpp
Module 2/Task_11_3/: CMakeLists.txt  Leaver.cpp  Leaver.h
Module 2/Task_11_5/: CMakeLists.txt  Equilateral_Triangle.cpp  Equilateral_Triangle.h  Figure.cpp  FigureImplementation.cpp  Isosceles_Triangle.cpp  Parallelogram.h  Quadrangle.h  Rectangle_.cpp  Rectangle_.h  Rhombus.cpp  Square.cpp  Triangle.cpp
Module 2/Task_1_1/: Task_1_1.cpp  Task_1_1.sln  Task_1_1.vcxproj
Module 2/Task_2_1/: Task_2_1.cpp  Task_2_1.sln  Task_2_1.vcxproj
Module 2/Task_2_2/: Task_2_2.cpp  Task_2_2.sln  Task_2_2.vcxproj
Module 2/Task_2_3/: Task_2_3.cpp  Task_2_3.sln  Task_2_3.vcxproj
Module 2/Task_3_1/: Task_3_1.cpp  Task_3_1.sln  Task_3_1.vcxproj
Module 2/Task_3_2/: Task_3_2.cpp  Task_3_2.sln  Task_3_2.vcxproj
Module 2/Task_4_1/: Task_4_1.cpp  Task_4_1.sln  Task_4_1.vcxproj
Module 2/Task_4_2/: Task_4_2.cpp  Task_4_2.sln  Task_4_2.vcxproj
Module 2/Task_5_1/: Task_5_1.cpp  Task_5_1.sln  Task_5_1.vcxproj
Module 5/Task_5_1/: CMakeLists.txt  main.cpp
TestCase1/: IdentifierGenerator.cpp  IdentifierGenerator.h  TestCase1.cpp  TestCase1.sln  TestCase1.vcxproj
TestCase2/: PersonClasses.cpp  PersonClasses.h  TestCase2.cpp  TestCase2.sln  TestCase2.vcxproj
TestCaseNeto1/: TestCaseNeto1.sln  TestCaseNeto1.vcxproj
(+274 files in other folders)
